--- a/lect_03_algebra.ipynb
+++ b/lect_03_algebra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 25   5   1]\n",
+      " [ 64   8   1]\n",
+      " [144  12   1]]\n",
+      "[106.8 177.2 279.2]\n"
+     ]
+    }
+   ],
    "source": [
     "mat = np.array([[25,5,1],[64,8,1],[144,12,1]])\n",
     "vec_b = np.array([106.8,177.2,279.2])\n",
@@ -40,9 +51,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       " \\begin{equation*}\n",
+       "            \\begin{bmatrix*} \n",
+       "                  \\Huge {25} & \\Huge {5} & \\Huge {1}\\\\[1em]\n",
+       "                  \\Huge {64} & \\Huge {8} & \\Huge {1}\\\\[1em]\n",
+       "                  \\Huge {144} & \\Huge {12} & \\Huge {1}      \n",
+       "            \\end{bmatrix*} \n",
+       "            \\begin{bmatrix*}\n",
+       "                  \\Huge a_1\\\\[1.8em]\n",
+       "                  \\Huge a_2\\\\[1.8em]\n",
+       "                  \\Huge a_3\n",
+       "            \\end{bmatrix*}=\n",
+       "            \\begin{bmatrix*}\n",
+       "                  \\Huge {106.8}\\\\[1em]\n",
+       "                  \\Huge {177.2}\\\\[1em]\n",
+       "                  \\Huge {279.2}\n",
+       "            \\end{bmatrix*}\n",
+       "      \\end{equation*}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Latex(f\"\"\" \\\\begin{{equation*}}\n",
     "            \\\\begin{{bmatrix*}} \n",
@@ -66,9 +107,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forward elimination\n",
+      "\n",
+      "[[ 25.    5.    1.  106.8]\n",
+      " [ 64.    8.    1.  177.2]\n",
+      " [144.   12.    1.  279.2]]\n",
+      "\n",
+      "[[  25.       5.       1.     106.8  ]\n",
+      " [   0.      -4.8     -1.56   -96.208]\n",
+      " [   0.     -16.8     -4.76  -335.968]]\n",
+      "\n",
+      "[[ 25.      5.      1.    106.8  ]\n",
+      " [  0.     -4.8    -1.56  -96.208]\n",
+      " [  0.      0.      0.7     0.76 ]]\n",
+      "\n",
+      "backward substitution\n",
+      "\n",
+      "x[2] = 0.7599999999999909/0.6999999999999993 = 1.0857142857142739\n",
+      "\n",
+      "x[1] = (-96.20800000000003 + 1.6937142857142673)/-4.800000000000001 = 19.690476190476197\n",
+      "\n",
+      "x[0] = (106.8 - 99.53809523809527)/25.0 = 0.2904761904761893\n",
+      "\n",
+      "\n",
+      "The solution is: \n",
+      "X0 = 0.29048\tX1 = 19.69048\tX2 = 1.08571\t"
+     ]
+    }
+   ],
    "source": [
     "\n",
     " \n",
@@ -116,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[144  12   1]\n",
+      " [ 25   5   1]\n",
+      " [ 64   8   1]]\n",
+      "[279.2 106.8 177.2]\n"
+     ]
+    }
+   ],
    "source": [
     "mat = np.array([[144,12,1],[25,5,1],[64,8,1]])\n",
     "vec_b = np.array([279.2,106.8,177.2])\n",
@@ -478,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
