--- a/lect_01_error.ipynb
+++ b/lect_01_error.ipynb
@@ -6,6 +6,24 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<center>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<font style=\"font-size:5.4em ; color:black'\" > \n",
+    "<span style=\"background : yellow\">\n",
+    "#1 Introduction\n",
+    "</span>\n",
+    "</font>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "</center>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -121,11 +139,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<center>\n",
+    "<hr>\n",
+    "<font size=\"20\" color='Blue' >The end...</font>\n",
+    "<hr>\n",
+    "</center>"
+   ]
   }
  ],
  "metadata": {
