--- a/lect_06_integ.ipynb
+++ b/lect_06_integ.ipynb
@@ -1538,6 +1538,17 @@
     "for e in error:\n",
     "    print(f'Relative True Error: {e:0.6} %')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "<hr>\n",
+    "<font size=\"20\" color='Blue' >The end...</font>\n",
+    "<hr>\n",
+    "</center>"
+   ]
   }
  ],
  "metadata": {
