--- a/lect_03_algebra.ipynb
+++ b/lect_03_algebra.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<center>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<font style=\"font-size:5.4em ; color:black'\" > \n",
+    "<span style=\"background : yellow\">\n",
+    "#3 Algebra\n",
+    "</span>\n",
+    "</font>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "</center>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
