--- a/lect_06_diff.ipynb
+++ b/lect_06_diff.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<center>\n",
     "<hr>\n",
     "<hr>\n",
-    "<font size=\"40\" color='Black' >#6-1 Differentiation </font>\n",
+    "<font style=\"font-size:5.4em ; color:black'\" > \n",
+    "<span style=\"background : yellow\">\n",
+    "#6-1 Differentiation\n",
+    "</span>\n",
+    "</font>\n",
     "<hr>\n",
     "<hr>\n",
     "</center>\n"
