--- a/lect_07_ode.ipynb
+++ b/lect_07_ode.ipynb
@@ -9,7 +9,7 @@
     "<hr>\n",
     "<font style=\"font-size:5.4em ; color:black'\" > \n",
     "<span style=\"background : yellow\">\n",
-    "#7 ODE\n",
+    "#7 Ordinary Differential Equation\n",
     "</span>\n",
     "</font>\n",
     "<hr>\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
