--- a/lect_04_optimization.ipynb
+++ b/lect_04_optimization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,12 +253,12 @@
     "        r=(np.sqrt(5)-1)/2 #GOLDEN RATIO\n",
     "        e=((1-r)*(abs((xu-xl)/xopt)))*100 #Error\n",
     "        print('Error:',e)\n",
-    "        time.sleep(1)"
+    "        time.sleep(10*math.exp(-it/10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
